--- a/data/processor.ipynb
+++ b/data/processor.ipynb
@@ -11,7 +11,12 @@
    },
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "from itertools import combinations\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "from genderize import Genderize\n"
    ]
   },
   {
@@ -29,8 +34,8 @@
     }
    ],
    "source": [
+    "# read in parsed data in csv format\n",
     "df = pd.read_csv('dblp_article.csv', sep=';')\n",
-    "\n",
     "df"
    ],
    "metadata": {
@@ -64,16 +69,12 @@
     }
    ],
    "source": [
+    "# only take four columns, drop nan, reset index, split authors to list\n",
     "df_parsed = df[['id', 'author', 'title', 'year']]\n",
-    "\n",
     "df_parsed.dropna(inplace=True)\n",
-    "\n",
     "df_parsed.reset_index(drop=True, inplace=True)\n",
-    "\n",
     "df_parsed['year'] = df_parsed['year'].astype('int64')\n",
-    "\n",
     "df_parsed['author'] = df_parsed['author'].str.split('|')\n",
-    "\n",
     "df_parsed"
    ],
    "metadata": {
@@ -89,13 +90,165 @@
    "execution_count": 8,
    "outputs": [],
    "source": [
-    "df_parsed.to_pickle('dblp_article_filtered.pkl')\n"
+    "# save to file\n",
+    "df_parsed.to_pickle('dblp_article_filtered.pkl')"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n",
      "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# filter out single author articles\n",
+    "articles_multi = [df_parsed['author'].map(lambda x: len(x)) > 1]\n",
+    "articles_multi"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# save to file\n",
+    "articles_multi.to_pickle('dblp_article_multi_author.pkl')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# expend the author list \n",
+    "df_expand = pd.DataFrame([(author, tup.id, position, tup.year) for tup in articles_multi.itertuples() for position, author in enumerate(tup.author)],\n",
+    "                         columns=['author', 'publication', 'position', 'year'])\n",
+    "\n",
+    "df_expand"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# sort authors by number of publications, convert to DataFrame\n",
+    "unique_author, pub_count = np.unique(df_expand['author'].tolist(), return_counts=True)\n",
+    "author_count_map = dict(zip(unique_author, pub_count))\n",
+    "top_author = sorted(author_count_map.items(), key=lambda x:x[1], reverse=True)\n",
+    "df_authors = pd.DataFrame(top_author, columns=['author', 'number_publication'])\n",
+    "df_authors"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# save to file\n",
+    "df_authors.to_pickle('authors.pkl')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# generate author pairs, convert to edge list\n",
+    "articles_multi['pairs'] = articles_multi['author'].map(lambda x: list(combinations(x,2)))\n",
+    "edge_list = pd.DataFrame([(pair[0],pair[1], tup.title, tup.year) for tup in articles_multi.itertuples() for pair in tup.pairs], columns=['source', 'target', 'title', 'year'])\n",
+    "edge_list"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# save to file\n",
+    "edge_list.to_csv('dblp_article_duplicate_edge_list.csv', index=None)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# get a list of unique first name\n",
+    "unique_first_name_source = edge_list['source'].map(lambda x: x.split(' ')[0]).unique()\n",
+    "unique_first_name_target = edge_list['target'].map(lambda x: x.split(' ')[0]).unique()\n",
+    "unique_first_name = np.concatenate((unique_first_name_source, unique_first_name_target), axis=None)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# init a Genderize instance, get the list of genders\n",
+    "gender = Genderize()\n",
+    "gender_list = gender.get(unique_first_name)\n",
+    "df_gender = pd.DataFrame(gender_list)\n",
+    "df_gender.to_csv('gender_list.csv', index=None)\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
     }
    }
   }
