--- a/data/data_playground.ipynb
+++ b/data/data_playground.ipynb
@@ -61,7 +61,7 @@
    "source": [
     "g = nx.from_pandas_edgelist(edge_list)\n",
     "degrees = sorted(g.degree(), key=lambda x:x[1], reverse=True)\n",
-    "degrees"
+    "#degrees"
    ],
    "metadata": {
     "collapsed": false,
@@ -87,7 +87,7 @@
    ],
    "source": [
     "author_degree = pd.DataFrame(degrees, columns=['author', 'degree'])\n",
-    "author_degree"
+    "#author_degree"
    ],
    "metadata": {
     "collapsed": false,
