--- a/data/processor.ipynb
+++ b/data/processor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -21,8 +21,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "outputs": [
+    {
+     "name": "stderr",
+     "text": [
+      "/home/fangchenli/miniconda3/envs/data/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3058: DtypeWarning: Columns (2,4,5,6,7,8,9,10,11,13,14,18,19,20,21,22,23,24,28,29,31) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  interactivity=interactivity, compiler=compiler, result=result)\n"
+     ],
+     "output_type": "stream"
+    },
     {
      "data": {
       "text/plain": "              id                                             author  \\\n0          91701                                                NaN   \n1          91702                                                NaN   \n2          91703                                                NaN   \n3        2480033                                       Frank Manola   \n4        2480034  Alejandro P. Buchmann|Frank Manola|Mark F. Hor...   \n...          ...                                                ...   \n2137507  7186397                              C. J. Date|E. F. Codd   \n2137508  7186398                                 Patrick A. V. Hall   \n2137509  7186399   Hugo Hellebrand|Markus Casper|Ralf Merz|Rita Ley   \n2137510  7186400                                         E. F. Codd   \n2137511  7186401  Andreas Rock|Gayane Grigoryan|Günther Heineman...   \n\n        author-aux                             author-orcid booktitle cdate  \\\n0              NaN                                      NaN       NaN   NaN   \n1              NaN                                      NaN       NaN   NaN   \n2              NaN                                      NaN       NaN   NaN   \n3              NaN                                      NaN       NaN   NaN   \n4              NaN                                      NaN       NaN   NaN   \n...            ...                                      ...       ...   ...   \n2137507        NaN                                      NaN       NaN   NaN   \n2137508        NaN                                      NaN       NaN   NaN   \n2137509        NaN                      0000-0002-1163-8988       NaN   NaN   \n2137510        NaN                                      NaN       NaN   NaN   \n2137511        NaN  0000-0002-1163-8988|0000-0002-4831-9016       NaN   NaN   \n\n                   cdrom cite cite-label crossref  ... publisher  publtype  \\\n0                    NaN  NaN        NaN      NaN  ...       NaN  informal   \n1                    NaN  NaN        NaN      NaN  ...       NaN  informal   \n2                    NaN  NaN        NaN      NaN  ...       NaN  informal   \n3                    NaN  NaN        NaN      NaN  ...       NaN  informal   \n4                    NaN  NaN        NaN      NaN  ...       NaN  informal   \n...                  ...  ...        ...      ...  ...       ...       ...   \n2137507              NaN  NaN        NaN      NaN  ...       NaN       NaN   \n2137508              NaN  NaN        NaN      NaN  ...       NaN       NaN   \n2137509              NaN  NaN        NaN      NaN  ...       NaN       NaN   \n2137510  ibmTR/rj987.pdf  NaN        NaN      NaN  ...       NaN  informal   \n2137511              NaN  NaN        NaN      NaN  ...       NaN       NaN   \n\n         sub  sup                                              title  \\\n0        NaN  NaN                                            (error)   \n1        NaN  NaN                              (was never published)   \n2        NaN  NaN                                                  …   \n3        NaN  NaN  Object Data Language Facilities for Multimedia...   \n4        NaN  NaN  Object Data Model Facilities for Multimedia Da...   \n...      ...  ...                                                ...   \n2137507  NaN  NaN  Interactive Support for Non-Programmers: The R...   \n2137508  NaN  NaN  Common Subexpression Identification in General...   \n2137509  NaN  NaN  Catchment classification by runoff behaviour w...   \n2137510  NaN  NaN  Relational Completeness of Data Base Sublangua...   \n2137511  NaN  NaN  Analysis of projected hydrological behavior of...   \n\n        title-bibtex   tt                                              url  \\\n0                NaN  NaN                                              NaN   \n1                NaN  NaN                                              NaN   \n2                NaN  NaN                                              NaN   \n3                NaN  NaN  db/journals/gtelab/index.html#TR-0169-12-91-165   \n4                NaN  NaN  db/journals/gtelab/index.html#TM-0332-11-90-165   \n...              ...  ...                                              ...   \n2137507          NaN  NaN                                              NaN   \n2137508          NaN  NaN                                              NaN   \n2137509          NaN  NaN                                              NaN   \n2137510          NaN  NaN                                              NaN   \n2137511          NaN  NaN                                              NaN   \n\n                    volume    year  \n0                      NaN     NaN  \n1                      NaN     NaN  \n2                      NaN     NaN  \n3        TR-0169-12-91-165  1991.0  \n4        TM-0332-11-90-165  1990.0  \n...                    ...     ...  \n2137507             RJ1400  1974.0  \n2137508                NaN  1974.0  \n2137509                 15  2011.0  \n2137510              RJ987  1972.0  \n2137511                 16  2012.0  \n\n[2137512 rows x 33 columns]",
@@ -30,7 +38,7 @@
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 6
+     "execution_count": 2
     }
    ],
    "source": [
