--- a/data/test_note.ipynb
+++ b/data/test_note.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -47,28 +47,20 @@
    },
    "outputs": [],
    "source": [
-    "edge_list = pd.read_csv('edge_list_filtered.csv')"
+    "edge_list = pd.read_csv('edge_list_filtered.csv')\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "is_executing": false,
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "1040189"
-     },
-     "metadata": {},
-     "output_type": "execute_result",
-     "execution_count": 5
-    }
-   ],
+   "outputs": [],
    "source": [
     "g = nx.from_pandas_edgelist(edge_list)\n",
     "nx.set_node_attributes(g, name_gender_map, 'gender')\n",
@@ -79,6 +71,30 @@
     "num_male = len(male_node)\n",
     "num_total = num_female + num_male"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "4092204"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 6
+    }
+   ],
+   "source": [
+    "nx.number_of_edges(g)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
   },
   {
    "cell_type": "code",
@@ -168,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {
     "pycharm": {
      "is_executing": false,
