student, mentor,plot

--- a/data/test_note.ipynb
+++ b/data/test_note.ipynb
@@ -47,8 +47,7 @@
    },
    "outputs": [],
    "source": [
-    "edge_list = pd.read_csv('edge_list_filtered.csv')\n",
-    "\n"
+    "edge_list = pd.read_csv('edge_list_filtered.csv')"
    ]
   },
   {
